[package]
name = "cfg_me"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

[package.metadata.configure_me]
spec = "config_spec.toml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configure_me = "0.3.3"
serde = "1"
configure_me_codegen = { version = "0.3.12", features = ["man"] }

[build-dependencies]
configure_me_codegen = "0.3.12"
