[package]
name = "cfg_me"
version = "0.1.1"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"
description = "File generator for `configure_me`"
license = "MITNFA"
repository = "https://github.com/Kixunil/cfg_me"

[package.metadata.configure_me]
spec = "config_spec.toml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["spanned"]
spanned = ["configure_me_codegen/spanned"]

[dependencies]
configure_me = "0.4.0"
serde = "1"
configure_me_codegen = { version = "0.4.3", features = ["man"] }

[build-dependencies]
configure_me_codegen = "0.4.3"
